@@ -41,6 +41,7 @@ NEWS
   * fixed mod_secdownload problem with unsigned time_t (#1688)
   * handle EAGAIN and EINTR for freebsd sendfile (#1675)
   * Use filedescriptor 0 for mod_scgi spawn socket, redirect STDERR to /dev/null (#1716)
+  * fixed round-robin balancing in mod_proxy (#1715)
 
 - 1.4.19 - 2008-03-10
 
